jobber-k8s/minikube/0-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobber-frontend-ingress
  namespace: production
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: jobber-frontend
      port: 
        number: 80
  tls:
    - hosts:
      - jobber.hauxun.com
      secretName: frontend-ingress-tls
  rules:
  - host: jobber.hauxun.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jobber-frontend
            port: 
              number: 80
